[workspace]
members = ["aud/cli", "aud/lib"]
resolver = "2"

[workspace.lints.rust]
unused_extern_crates = "deny"
rust_2018_idioms = "deny"
rust_2021_incompatible_or_patterns = "deny"
rust_2021_incompatible_closure_captures = "deny"

[workspace.lints.clippy]
all = "deny"

[profile.release]
lto = "fat"

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.48"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
log = "0.4.20"
lazy_static = "1.4.0"
fern = "0.6.2"
notify = "6.1.1"
ratatui = "0.24.0"
