[package]
name = "aud_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aud"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
aud = { package = "audlib", path = "../lib" }
anyhow = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
notify = { workspace = true }
ratatui = { workspace = true }
crossterm = "0.27.0"
humantime = "2.1.0"
clap = { version = "4.4.3", features = ["derive"] }
clap_complete = "4.4.1"
colored = "2.0.4"
dirs = "5.0.1"
rusty_link = "0.4.1"
syntect = "5.1.0"
midly = "0.5.3"
lazy_static = "1.4.0"

[dev-dependencies]
strum = { version = "0.26", features = ["derive"] }
