[package]
name = "aud_lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
ffi = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
rusty_link = "0.3.6"
midir = "0.9.1"
cpal = "0.15.2"
mlua = { version = "0.9.1", features = ["lua54", "unstable"] }
notify = "6.1.1"
lazy_static = "1.4.0"
