[package]
name = "aud_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["ffi", "udp"]
ffi = []
udp = ["serde", "bincode"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
rusty_link = "0.3.6"
midir = "0.9.1"
cpal = "0.15.2"
mlua = { version = "0.9.1", features = ["lua54", "unstable"] }
notify = "6.1.1"
serde = { version = "1.0.188", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
fern = { workspace = true }
mockall = "0.11.4"
test-log = "0.2.12"
env_logger = "0.10.0"

[build-dependencies]
cbindgen = "0.26.0"
