[package]
name = "aud_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
aud = { package = "aud_lib", path = "../lib" }
anyhow = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
notify = { workspace = true }
ratatui = { workspace = true }
syntect = "5.1.0"
midly = "0.5.3"
lazy_static = "1.4.0"

[dev-dependencies]
strum = { version = "0.25", features = ["derive"] }
